--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# save_model files
+save_model/
+save_model_apascal/
+save_model_bank-additional-full_normalised/
+save_model_probe/
+save_model_secom/
+save_model_test/
